<resources>
    <!-- Logo String -->
    <string name="app_name">CopenhagenBuzz</string>

    <!-- Adding Event Input Strings   -->
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="event_type">Event Type</string>
    <string name="event_description">Event Description</string>
    <string name="add_image">Add Image</string>
    <string name="add_event">Add Event</string>


    <!-- Event Types Input Array -->
    <string-array name="event_types">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>

    <!-- Login & Logout Strings   -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_user">Create User</string>

    <!-- Fragments Strings -->
    <string name="favorites_fragment">Favorites</string>
    <string name="maps_fragment">Maps</string>
    <string name="timeline_fragment">Timeline</string>
    <string name="create_event">Create Event</string>


    <!-- Top App Bar -->
    <string name="user_info">User Info</string>
    <string name="action_logout">Logout</string>



    <!-- Event Row Item Buttons -->
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>



    <!-- Camerax.xml strings -->
    <string name="button_camera_switch_description">Switch camera</string>
    <string name="button_image_capture_description">Capture</string>
    <string name="button_image_viewer_description">Gallery</string>


    <!-- Marker Dialog strings -->
    <string name="dialog_directions_prompt">Do you want to get directions in Google Maps?</string>



</resources>