<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"
        android:visible="true" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>