<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/app_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            style="@style/Base.Theme.CopenhagenBuzz"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <Space
            android:layout_width="@dimen/ten_dp"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/user_button"
            android:text="@string/create_user"
            style="@style/Base.Theme.CopenhagenBuzz"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>