<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    >


    <!-- Add Event Name Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_name"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/event_name"

        app:endIconMode="clear_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:startIconDrawable="@drawable/baseline_festival_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_name"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <!-- Add Event Location Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_location"
        android:hint="@string/event_location"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_standard"

        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_add_location_alt_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_location"
            android:inputType="text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <!-- Add Event Date Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_date"
        android:hint="@string/event_date"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_standard"

        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_date_range_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_event_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_date"
            android:inputType="text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>




    <!-- Add Event Type Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_type"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_standard"

        app:startIconDrawable="@drawable/baseline_dehaze_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_event_date">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view_event_type"
            android:inputType="none"
            android:hint="@string/event_type"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:simpleItems="@array/event_types"
            />
    </com.google.android.material.textfield.TextInputLayout>




    <!-- Add Event Description Input Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_description"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/event_description"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_event_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_description"
            android:layout_width="match_parent"

            android:layout_height="200dp"
            android:gravity="top|start"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Add Event Button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="150dp"

        android:contentDescription="@string/add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_event_description"
        app:srcCompat="@drawable/baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>